--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
       <div class="portfolio-item" data-category="web-application">
         <div class="portfolio-item-inner outer-shadow">
           <div class="portfolio-item-img">
-            <img src="img/portfolio/thumb/Port 1-1.PNG" alt="portfolio" data-screenshots="img/portfolio/large/project-4/Port 1-1, 
-            img/portfolio/large/project-4/Port 1-2, img/portfolio/large/project-4/Port 1-3">
+            <img src="img/portfolio/thumb/Port 1-1.PNG" alt="portfolio" data-screenshots="img/portfolio/large/project-4/Port 1-1.png, 
+            img/portfolio/large/project-4/Port 1-2.png, img/portfolio/large/project-4/Port 1-3.png">
             <!-- View Project Button -->
             <span class="view-project">view project</span>
           </div>
